[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yamada7"
version = "0.1.0"
description = "Experimentation framework for emergent curiosity and fear in LLM-centric agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "utabi"}
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.4.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]

